--- a/config.json
+++ b/config.json
@@ -1,12 +1,10 @@
 {
-  "mapFolder": "invasion-defense.w3x",
+  "mapFolder": "zombie-invasion-defense.w3x",
   "minifyScript": false,
-  "gameExecutable": "E:\\Games\\Warcraft III\\_retail_\\x86_64\\Warcraft III.exe",
+  "gameExecutable": "C:\\Program Files\\Warcraft III\\_retail_\\x86_64\\Warcraft III.exe",
   "outputFolder": "./dist/bin",
   "launchArgs": [
-    "-launch",
-    "-windowmode",
-    "windowed"
+    "-launch"
   ]
 }
 
