--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ts-node --transpile-only scripts/test.ts",
     "build": "ts-node --transpile-only scripts/build.ts",
     "dev": "npm-watch",
-    "build:defs": "ts-node scripts/dev"
+    "build:defs": "ts-node scripts/dev",
+    "lint:fix": "npx eslint --fix src/*/*.ts"
   },
   "dependencies": {
     "w3ts": "^3.0.2"
@@ -18,12 +19,17 @@
     "@types/fs-extra": "8.1.1",
     "@types/node": "12.19.1",
     "@types/pako": "1.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "@typescript-to-lua/language-extensions": "^1.0.0",
+    "eslint": "^8.53.0",
     "fs-extra": "8.1.0",
     "lua-types": "^2.13.1",
     "luamin": "^1.0.4",
     "mdx-m3-viewer-th": "^5.13.0",
     "npm-watch": "0.6.0",
+    "prettier": "3.1.0",
+    "prettier-eslint": "^16.1.2",
     "ts-node": "8.10.2",
     "tsconfig-paths": "3.9.0",
     "tsutils": "3.17.1",
