--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,24 +7,40 @@
     "extends": [
         // "eslint:recommended"
         // "plugin:@typescript-eslint/recommended"
+        // "plugin:import/recommended",
+        // "plugin:import/typescript",
+        // "plugin:import/errors",
+        // "plugin:import/warnings",
+        // "plugin:import/no-cycle"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    // "settings": {
+    //     "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
+    //     "import/parsers": {
+    //         "@typescript-eslint/parser": [".ts", ".tsx"]
+    //     }
+    // },
+    "plugins": ["@typescript-eslint", "import"],
     "rules": {
         "curly": "warn",
-        "no-empty" :"warn",
+        "no-empty": "warn",
         "no-else-return": "error",
         "no-extra-bind": "warn",
         "no-useless-call": "warn",
         "no-extra-boolean-cast": "warn",
         "no-invalid-this": "error",
-        "prefer-const" : "warn",
-        "yoda" :"warn"
+        "prefer-const": "warn",
+        "yoda": "warn"
+        // "import/no-cycle": [
+        //     "error",
+        //     {
+        //         "maxDepth": 10,
+        //         "ignoreExternal": true
+        //     }
+        // ]
     }
 }
