--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cSpell.words": ["alarics", "Chainlightning", "lich", "Trigs"]
+    "cSpell.words": ["alarics", "Chainlightning", "lich", "nerfed", "Trigs"]
 }
