--- a/config.json
+++ b/config.json
@@ -1,10 +1,17 @@
 {
-  "mapFolder": "zombie-invasion-defense.w3x",
-  "minifyScript": false,
-  "gameExecutable": "C:\\Program Files\\Warcraft III\\_retail_\\x86_64\\Warcraft III.exe",
-  "outputFolder": "./dist/bin",
-  "launchArgs": [
-    "-launch"
-  ]
+    "mapFolder": "zombie-invasion-defense.w3x",
+    "minifyScript": false,
+    "gameExecutable": "C:\\Program Files\\Warcraft III\\_retail_\\x86_64\\Warcraft III.exe",
+    "outputFolder": "./dist/bin",
+    "launchArgs": ["-launch"],
+    "wtsParserOutputFolder": "src/WTS Generated Enums",
+    "wtsParserGeneratedEnumNames": {
+        "units": "WTS_Units",
+        "items": "WTS_Items",
+        "destructibles": "WTS_Destructibles",
+        "doodads": "WTS_Doodads",
+        "abilities": "WTS_Abilities",
+        "buffsEffects": "WTS_Buffs_Effects",
+        "upgrades": "WTS_Upgrades"
+    }
 }
-
